Tests refactoring: streamEx, repeats with consumer